<resources>
    <string name="app_name">Currenz</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_register">Don’t have account? Create now</string>
    <string name="click_here_to_login">Already have account? Login now</string>
    <string name="logout">Logout</string>
    <string name="google_sign_in">login with google</string>
    <string name="or_continue_with">Or continue with</string>
    />
</resources>